<resources>
    <string name="app_name">SampleDesign</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="application_has_no_license">Application Has No License !!!</string>
    <string name="nolicense_message">Currently, your application has no license for using on this device.\n\nTo continue, your application must have license key.</string>
    <string name="requestlicense_message">Request your license by using the following button</string>
    <string name="application_license_request">Application License Request</string>
    <string name="login_id">Login ID</string>
    <string name="password">Password</string>
    <string name="request">Request</string>
    <string name="request_pending">Request Pending !!!</string>
    <string name="requestpending_message">Requesting license for your application has been successfully finished and it is in pending state.\n\nFor next steps, your admin needs to approve license requests.</string>
    <string name="please_contact_your_administrator">Please contact your administrator</string>
    <string name="check">Check</string>
    <string name="request_failed">Request Failed !!!</string>
    <string name="errorlicenserequest_message">Error occurred when requesting your application license from the server.</string>
    <string name="try_again">Try Again</string>
    <string name="no_extra_license">No Extra License !!!</string>
    <string name="noextralicense_message">Currently, there is no extra license key for your application.\n\nBuy more license key for your application.</string>
    <string name="fams">FAMS</string>
    <string name="fams_app">fams-App</string>
</resources>
