<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoLicenseFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/application_has_no_license"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNoLicenseMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="16dp"
        android:textSize="15sp"
        android:layout_marginStart="16dp"

        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"

        android:text="@string/nolicense_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/txtRequestLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="16dp"
        android:textSize="15sp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/requestlicense_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNoLicenseMsg" />

    <Button
        android:id="@+id/btnRequestLicense"
        android:layout_width="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_height="wrap_content"
        android:text="@string/request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRequestLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>